<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.idtech.shiqihu.animalaram.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="@drawable/background">


    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"

        />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="30dp"
        android:layout_toRightOf="@id/imageView1"


        />

    <Button
        android:layout_below="@id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/elephantButton"
        android:text="@string/elephant_button_string"
        android:onClick = "elephantButtonPressed"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lionButton"
        android:layout_below="@id/elephantButton"
        android:text="@string/lion_button_string"
        android:onClick="lionButtonPressed"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tigerButton"
        android:layout_below = "@id/lionButton"
        android:text="@string/tiger_button_string"
        android:onClick="tigerButtonPressed"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    android:id="@+id/leopardButton"
        android:layout_below="@id/tigerButton"
        android:text="@string/leopard_button_string"
        android:onClick="leopardButtonPressed"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/wolfButton"
        android:layout_below="@id/leopardButton"
        android:text="@string/wolf_button_string"
        android:onClick="wolfButtonPressed"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/catButton"
        android:layout_below="@id/wolfButton"
        android:text="@string/cat_button_string"
        android:onClick="catButtonPressed"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mouseButton"
        android:layout_below="@id/catButton"
        android:text="@string/mouse_button_string"
        android:onClick="mouseButtonPressed"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/leopardButton"
        android:layout_marginTop="100dp"
        android:padding = "20dp"
        android:id="@+id/result_text"
        android:text="@string/result1"
        android:textColor="@color/red"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/resultTextView"
        android:layout_below="@id/result_text"
        android:layout_toRightOf="@id/leopardButton"
        android:textColor="@color/red"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/resultTextView"
        android:layout_toRightOf="@id/leopardButton"
        android:id="@+id/scoreboard"
        android:text="@string/scoreboard"
        android:textColor="@color/red"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/player"
        android:layout_toRightOf="@id/leopardButton"
        android:layout_below="@id/scoreboard"
        android:text = "@string/player"
        android:textColor="@color/red"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/player_score"
        android:layout_toRightOf="@id/leopardButton"
        android:layout_below="@id/player"
        android:text = ""
        android:textColor="@color/red"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/computer"
        android:layout_toRightOf="@id/leopardButton"
        android:layout_below="@id/player_score"
        android:text = "@string/computer"
        android:textColor="@color/red"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/computer_score"
        android:layout_toRightOf="@id/leopardButton"
        android:layout_below="@id/computer"
        android:text = ""
        android:textColor="@color/red"
        />

    <ImageView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:id="@+id/greybox1"
        android:alpha="0.5"
        android:src="@color/grey"
        android:layout_alignLeft="@id/result_text"
        android:layout_toRightOf="@id/elephantButton"
        android:layout_marginTop="120dp" />


</RelativeLayout>
